[package]
name = "helper_fn"
version = "0.1.0"
description = "A macro to create closure-like helper functions."
authors = ["tjjfvi"]
edition = "2018"
repository = "https://github.com/tjjfvi/helper_fn"
license = "MIT"
keywords = ["macro"]
categories = []
exclude = ["rustfmt.toml", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[lib]
proc-macro=true
